Main layout fixed: navbar with highest z-index and fixed position && root-div with margin top

--- a/app/assets/stylesheets/components/_custom.scss
+++ b/app/assets/stylesheets/components/_custom.scss
@@ -2,3 +2,18 @@
   left: auto;
   right: 0;
 }
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 101;
+  top: 0;
+}
+
+.root-div {
+  margin-top: calc(65px + 1vw);
+}
+
+nav.sidebar {
+  padding-top: calc(65px + 1vw);
+}
